--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Goodreads challenge -->
     
     <section class="goodreads">
-        <img src="" alt="" class="cover"/>
+        <img src="img/cover.jpg" alt="" class="cover"/>
         <h2 class="gr__title">Goodreads Challenge <span>2022</span></h2>
         <p class="gr__subtitle">52 books</p>
     </section>
