--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Anton&family=Sigmar+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
 </head>
 <body>
@@ -21,7 +23,7 @@
                     <li class="list__item"><a href="#" class="nav__url">Projects</a></li>
                     <li class="list__item"><a href="#" class="nav__url">Book List</a></li>
                     <li class="list__item"><a href="#" class="nav__url">Youtube</a></li>
-                    <li class="list__item"><a href="#" class="nav__url">Socials</a></li>
+                    <!-- <li class="list__item"><a href="#" class="nav__url">Socials</a></li> -->
                     <li class="list__item"><a href="#" class="nav__url">Contact</a></li>
             </ul>
         </nav>
@@ -76,6 +78,7 @@
     <!-- Certification Showroom -->
     <section class="cert__showroom">
         <h2 class="cert__title">Certification Showroom</h2>
+        <span class="material-icons-outlined">arrow_back_ios</span>
         <div class="cert__content__box">
             <div class="cert__content__item">
                 <img src="img/0001.jpg" alt="" class="cert__img"/>
